--- a/package.json
+++ b/package.json
@@ -49,11 +49,12 @@
     "date-fns": "latest",
     "embla-carousel-react": "8.5.1",
     "file-saver": "^2.0.5",
-    "framer-motion": "^12.7.4",
+    "framer-motion": "^12.23.3",
     "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^5.0.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
