--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ PHONEPE_PROD_SALT_INDEX=2
 
 # Application URL (must match your current environment)
 # For local testing with production credentials, use production URL for callbacks
-NEXT_PUBLIC_APP_URL=https://nibog-five.vercel.app
+NEXT_PUBLIC_APP_URL=https://nibog.in
 
 # Debug: Force environment to be explicit
 NODE_ENV=development
