--- a/.env.local
+++ b/.env.local
@@ -17,7 +17,7 @@ PHONEPE_PROD_SALT_KEY=63542457-2eb4-4ed4-83f2-da9eaed9fcca
 PHONEPE_PROD_SALT_INDEX=2
 
 # Application URL for local development
-NEXT_PUBLIC_APP_URL=https://nibog-five.vercel.app
+NEXT_PUBLIC_APP_URL=https://nibog.in
 
 # Development mode
 NODE_ENV=development
