--- a/.env
+++ b/.env
@@ -27,4 +27,20 @@ NEXT_PUBLIC_APP_URL=https://www.nibog.in
 # Debug: Force environment to be explicit
 NODE_ENV=development
 
+# WhatsApp Integration via Zaptra
+# Set to 'true' to enable WhatsApp notifications
+WHATSAPP_NOTIFICATIONS_ENABLED=false
+# Zaptra API configuration
+ZAPTRA_API_URL=https://demo.zaptra.in/api/wpbox
+ZAPTRA_API_TOKEN=QqfIcXJtovwgUSGMtX1a3PY0XbXQCETeqFMlfjYi5c0aa036
+
+# WhatsApp Safety Configuration
+WHATSAPP_FALLBACK_ENABLED=true
+WHATSAPP_RETRY_ATTEMPTS=3
+WHATSAPP_TIMEOUT_MS=10000
+WHATSAPP_DEBUG=false
+
+# WhatsApp Template Configuration
+WHATSAPP_USE_TEMPLATES=false
+
 
