--- a/.env.local
+++ b/.env.local
@@ -23,3 +23,17 @@ NEXT_PUBLIC_APP_URL=https://www.nibog.in
 
 # Development mode
 NODE_ENV=development
+
+# WhatsApp Integration via Zaptra
+WHATSAPP_NOTIFICATIONS_ENABLED=true
+ZAPTRA_API_URL=https://demo.zaptra.in/api/wpbox
+ZAPTRA_API_TOKEN=QqfIcXJtovwgUSGMtX1a3PY0XbXQCETeqFMlfjYi5c0aa036
+WHATSAPP_FALLBACK_ENABLED=true
+WHATSAPP_RETRY_ATTEMPTS=3
+WHATSAPP_TIMEOUT_MS=10000
+WHATSAPP_DEBUG=true
+
+# WhatsApp Template Configuration
+WHATSAPP_USE_TEMPLATES=true
+
+
