--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
     "puppeteer": "^24.10.2",
     "qrcode": "^1.5.4",
