.env.production updated.

--- a/.env.production
+++ b/.env.production
@@ -20,3 +20,17 @@ NEXT_PUBLIC_APP_URL=https://www.nibog.in
 
 # Production mode
 NODE_ENV=production
+
+# WhatsApp Integration via Zaptra - PRODUCTION ENABLED
+WHATSAPP_NOTIFICATIONS_ENABLED=true
+ZAPTRA_API_URL=https://demo.zaptra.in/api/wpbox
+ZAPTRA_API_TOKEN=QqfIcXJtovwgUSGMtX1a3PY0XbXQCETeqFMlfjYi5c0aa036
+
+# WhatsApp Safety Configuration for Production
+WHATSAPP_FALLBACK_ENABLED=true
+WHATSAPP_RETRY_ATTEMPTS=3
+WHATSAPP_TIMEOUT_MS=10000
+WHATSAPP_DEBUG=false
+
+# WhatsApp Template Configuration
+WHATSAPP_USE_TEMPLATES=true
