whatsapp services updated to use new template connected with phase3 entertainments.

--- a/.env
+++ b/.env
@@ -31,8 +31,8 @@ NODE_ENV=development
 # Set to 'true' to enable WhatsApp notifications
 WHATSAPP_NOTIFICATIONS_ENABLED=true
 # Zaptra API configuration
-ZAPTRA_API_URL=https://demo.zaptra.in/api/wpbox
-ZAPTRA_API_TOKEN=QqfIcXJtovwgUSGMtX1a3PY0XbXQCETeqFMlfjYi5c0aa036
+ZAPTRA_API_URL=https://zaptra.in/api/wpbox
+ZAPTRA_API_TOKEN=ub94jy7OiCmCiggguxLZ2ETkbYkh5OtpNX3ZYISD737595b9
 
 # WhatsApp Safety Configuration
 WHATSAPP_FALLBACK_ENABLED=true
