--- a/.env.local
+++ b/.env.local
@@ -26,8 +26,8 @@ NODE_ENV=development
 
 # WhatsApp Integration via Zaptra
 WHATSAPP_NOTIFICATIONS_ENABLED=true
-ZAPTRA_API_URL=https://demo.zaptra.in/api/wpbox
-ZAPTRA_API_TOKEN=QqfIcXJtovwgUSGMtX1a3PY0XbXQCETeqFMlfjYi5c0aa036
+ZAPTRA_API_URL=https://zaptra.in/api/wpbox
+ZAPTRA_API_TOKEN=ub94jy7OiCmCiggguxLZ2ETkbYkh5OtpNX3ZYISD737595b9
 WHATSAPP_FALLBACK_ENABLED=true
 WHATSAPP_RETRY_ATTEMPTS=3
 WHATSAPP_TIMEOUT_MS=10000
