--- a/.env.production
+++ b/.env.production
@@ -23,8 +23,8 @@ NODE_ENV=production
 
 # WhatsApp Integration via Zaptra - PRODUCTION ENABLED
 WHATSAPP_NOTIFICATIONS_ENABLED=true
-ZAPTRA_API_URL=https://demo.zaptra.in/api/wpbox
-ZAPTRA_API_TOKEN=QqfIcXJtovwgUSGMtX1a3PY0XbXQCETeqFMlfjYi5c0aa036
+ZAPTRA_API_URL=https://zaptra.in/api/wpbox
+ZAPTRA_API_TOKEN=ub94jy7OiCmCiggguxLZ2ETkbYkh5OtpNX3ZYISD737595b9
 
 # WhatsApp Safety Configuration for Production
 WHATSAPP_FALLBACK_ENABLED=true
