updated phone intigrations

--- a/.env
+++ b/.env
@@ -1,23 +1,24 @@
 # PhonePe Configuration
-# Back to production with corrected API endpoints
-PHONEPE_ENVIRONMENT=production
-NEXT_PUBLIC_PHONEPE_ENVIRONMENT=production
+# IMPORTANT: Set to 'sandbox' for testing, 'production' for live payments
+PHONEPE_ENVIRONMENT=sandbox
+NEXT_PUBLIC_PHONEPE_ENVIRONMENT=sandbox
 
-# Test/Sandbox Credentials (for local development - these work anywhere)
-PHONEPE_TEST_MERCHANT_ID=PGTESTPAYUAT86
-PHONEPE_TEST_SALT_KEY=96434309-7796-489d-8924-ab56988a6076
+# Test/Sandbox Credentials (from PhonePe Business Dashboard)
+PHONEPE_TEST_MERCHANT_ID=TEST-M11BWXEAW0AJ
+NEXT_PUBLIC_TEST_MERCHANT_ID=TEST-M11BWXEAW0AJ
+PHONEPE_TEST_SALT_KEY=MirQnYzQTQZWONCOMDUOLWE3OGYZDRnxTBJNDYNOGMZ
+NEXT_PUBLIC_TEST_SALT_KEY=MirQnYzQTQZWONCOMDUOLWE3OGYZDRnxTBJNDYNOGMZ
 PHONEPE_TEST_SALT_INDEX=1
+NEXT_PUBLIC_TEST_SALT_INDEX=1
 
-# Production credentials for deployed website (accessible from both client and server)
-NEXT_PUBLIC_MERCHANT_ID=M11BWXEAW0AJ
-NEXT_PUBLIC_SALT_KEY=63542457-2eb4-4ed4-83f2-da9eaed9fcca
-NEXT_PUBLIC_SALT_INDEX=2
-
-# Production Credentials (server-side only - for additional security)
-# These should be set in Vercel environment variables
+# Production Credentials (from PhonePe Business Dashboard)
+# Only use these when PHONEPE_ENVIRONMENT=production
 PHONEPE_PROD_MERCHANT_ID=M11BWXEAW0AJ
+NEXT_PUBLIC_MERCHANT_ID=M11BWXEAW0AJ
 PHONEPE_PROD_SALT_KEY=63542457-2eb4-4ed4-83f2-da9eaed9fcca
+NEXT_PUBLIC_SALT_KEY=63542457-2eb4-4ed4-83f2-da9eaed9fcca
 PHONEPE_PROD_SALT_INDEX=2
+NEXT_PUBLIC_SALT_INDEX=2
 
 # Application URL (must match your current environment)
 # For local testing with production credentials, use production URL for callbacks
