--- a/package.json
+++ b/package.json
@@ -39,6 +39,28 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@stagewise/toolbar-next": "^0.2.0",
     "@tabler/icons-react": "^3.31.0",
+    "@tiptap/extension-code-block": "^3.2.1",
+    "@tiptap/extension-color": "^3.2.1",
+    "@tiptap/extension-dropcursor": "^3.2.1",
+    "@tiptap/extension-font-family": "^3.2.1",
+    "@tiptap/extension-gapcursor": "^3.2.1",
+    "@tiptap/extension-hard-break": "^3.2.1",
+    "@tiptap/extension-highlight": "^3.2.1",
+    "@tiptap/extension-horizontal-rule": "^3.2.1",
+    "@tiptap/extension-image": "^3.2.1",
+    "@tiptap/extension-link": "^3.2.1",
+    "@tiptap/extension-strike": "^3.2.1",
+    "@tiptap/extension-subscript": "^3.2.1",
+    "@tiptap/extension-superscript": "^3.2.1",
+    "@tiptap/extension-table": "^3.2.1",
+    "@tiptap/extension-table-cell": "^3.2.1",
+    "@tiptap/extension-table-header": "^3.2.1",
+    "@tiptap/extension-table-row": "^3.2.1",
+    "@tiptap/extension-text-align": "^3.2.1",
+    "@tiptap/extension-text-style": "^3.2.1",
+    "@tiptap/extension-underline": "^3.2.1",
+    "@tiptap/react": "^3.2.1",
+    "@tiptap/starter-kit": "^3.2.1",
     "@types/nodemailer": "^6.4.17",
     "@types/qrcode": "^1.5.5",
     "autoprefixer": "^10.4.20",
