--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@stagewise/toolbar-next": "^0.2.0",
     "@tabler/icons-react": "^3.31.0",
     "@tiptap/extension-code-block": "^3.2.1",
     "@tiptap/extension-color": "^3.3.0",
@@ -80,16 +79,16 @@
     "jspdf-autotable": "^5.0.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "14.2.5",
     "next-themes": "latest",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
     "puppeteer": "^24.10.2",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
-    "react": "^19",
+    "react": "^18.2.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
@@ -102,13 +101,14 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@stagewise/toolbar": "^0.3.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22",
     "@types/qrcode.react": "^1.0.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "15.5.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
