--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "15.5.2",
     "postcss": "^8",
+    "sharp": "^0.34.4",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
