--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "jspdf-autotable": "^5.0.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
-    "next": "14.2.5",
+    "next": "^15.0.0",
     "next-themes": "latest",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
@@ -105,10 +105,10 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22",
     "@types/qrcode.react": "^1.0.5",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^8.57.1",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "^15.0.0",
     "postcss": "^8",
     "sharp": "^0.34.4",
     "tailwindcss": "^3.4.17",
